1.spring security 작업완료  인가 진행순서  1./club/{clubId} 호출 시(로그인 후 모임선택)  2.CustomUserPrincipal.currentClubId setting  3.이후 권한확인이 필요한 api 호출시(대상api에는 @ClubPermissionCheck(permission = "POST_WRITE") << 달려있어야 권한체크가능)  4.PermissionCheckAspect 동작  5.로그인한 대상이 선택한 모임의 랭크를 가져옴  6.대상 랭크의 접근권한에 "POST_WRITE" 가 있는지 체크
 2.queryDSL + JPA 적용
  - 사전 점검 확인 필!!!
  File > Settings > Build, Execution, Deployment > Compiler > Annotation Processors
   Enable annotation processing 체크

  settings > build, Execution, Deployment > build tools > gradle
  run 어쩌고 하고 그아래꺼 둘다 gradle

  Settings > Annotation Processors > Enable 확인

  - 빌드시 gradle툴 사용해서 하지말고 terminal(bash)에서
  ./gradlew clean --refresh-dependencies
  ./gradlew clean build --refresh-dependencies
  로 진행

  - 사용법
  1.entity객체 필수
  2.ClubMemberRepositoryImpl.findRankIdByClubIdAndUserId 참고